--- a/ZotPad/MainStoryboard_iPad.storyboard
+++ b/ZotPad/MainStoryboard_iPad.storyboard
@@ -186,6 +186,7 @@
                     <connections>
                         <outlet property="searchBar" destination="5Lp-vc-vaz" id="j30-li-jVf"/>
                         <outlet property="tableView" destination="J8S-Ym-8C6" id="m5W-Om-e7X"/>
+                        <outlet property="toolBar" destination="OEM-9Y-d5F" id="3lr-dk-DX1"/>
                         <outlet property="view" destination="26" id="VwB-Lj-80j"/>
                     </connections>
                 </viewController>
